Update Codeless Firmware. Update library.properties with correct URL. Add comments and header to examples. Remove unused code in examples. Remove magic numbers in examples and libraries. Comment code. Refactor debug statements to improve readability. Refactor logic to reduce nesting.

--- a/Firmware/CodelessBLE/library.properties
+++ b/Firmware/CodelessBLE/library.properties
@@ -5,7 +5,6 @@ maintainer=SparkFun Electronics
 sentence=Library for interfacing to the DA14531MOD BLE coprocessor on the Thing Plus RA6M5.
 paragraph=
 category=Communication
-url=
+url=https://github.com/sparkfun/SparkFun_Thing_Plus_RA6M5
 architectures=renesas,renesas_thingplus_ra6m5
 depends=
-includes=codelessBLE.h,codelessBLECentral.h,codelessBLEPeripheral.h
