Enable automatic GitHub Pages build/deployment

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -148,44 +148,44 @@ plugins:
       redirect_maps:
         'index.md': 'introduction.md'
 
-  # # Add revision date
-  # - git-revision-date-localized:
-  #     enable_creation_date: true
-  #     type: timeago
+  # Add revision date
+  - git-revision-date-localized:
+      enable_creation_date: true
+      type: timeago
 
-  # # Add git committers at the bottom of the page
-  # - git-committers:
-  #     repository: sparkfun/SparkFun_Thing_Plus_RA6M5
-  #     branch: main
+  # Add git committers at the bottom of the page
+  - git-committers:
+      repository: sparkfun/SparkFun_Thing_Plus_RA6M5
+      branch: main
 
-  # # Add git authors at the bottom of the page
-  # - git-authors
+  # Add git authors at the bottom of the page
+  - git-authors
 
-  # # Enables use of Git submodules and larger code base
-  # - monorepo
+  # Enables use of Git submodules and larger code base
+  - monorepo
 
-  # # Enables improved security for external links
-  # - privacy:
-  #     # Disables cache mechanism, so that external assets can be updated during rebuilds
-  #     cache: false
+  # Enables improved security for external links
+  - privacy:
+      # Disables cache mechanism, so that external assets can be updated during rebuilds
+      cache: false
 
-  #     # # Allows for external assets to be used
-  #     # assets: true
-  #     # assets_fetch: true
+      # # Allows for external assets to be used
+      # assets: true
+      # assets_fetch: true
 
-  #     # Provide domains for assets that are retrieved from external sites
-  #     assets_include:
-  #       - https://docs.sparkfun.com/*
+      # Provide domains for assets that are retrieved from external sites
+      assets_include:
+        - https://docs.sparkfun.com/*
   
-  #     # External links open in a new tab
-  #     links_attr_map:
-  #       target: _blank
-  #     links_noopener: true
+      # External links open in a new tab
+      links_attr_map:
+        target: _blank
+      links_noopener: true
 
-  # # Optimizes media files (*.png and *.jpg)
-  # - optimize:
-  #     # Specify directory; otherwise, multiple instances are created (.cache/plugins and .cache/plugin)
-  #     cache_dir: .cache/plugins/optimize
+  # Optimizes media files (*.png and *.jpg)
+  - optimize:
+      # Specify directory; otherwise, multiple instances are created (.cache/plugins and .cache/plugin)
+      cache_dir: .cache/plugins/optimize
 
       # Default values (from auto-complete)
       # ------------------------------
