--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -213,7 +213,7 @@ markdown_extensions:
 
   # Adds the ability to embed content from arbitrary files
   - pymdownx.snippets:
-      # base_path: ['./docs']
+      base_path: ['.', './docs']
       url_download: true
       url_max_size: 0
       url_timeout: 0
